--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://piyusht823.github.io/my-portfolio",
+  "homepage": "https://piyusht823.github.io/my-portfolio/",
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
